Patch from https://github.com/graemeg/lazarus/pull/7 Updates android build script for newer SDKs
git-svn-id: http://svn.freepascal.org/svn/lazarus/trunk@48424 4005530d-fff6-0310-9dd1-cebe43e6787f